--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
+    "sequelize": "^6.35.0",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
