--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "setup": "node setup.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
